--- a/app/src/main/res/layout/recycler_main_container.xml
+++ b/app/src/main/res/layout/recycler_main_container.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="100dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:id="@+id/mainContainer">
 
     <ImageView
         android:id="@+id/imgImage"
